--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Vue Pre Youtube</title>
@@ -19,53 +20,52 @@
             .not-bars {
                 display: inline-block;
                 overflow: hidden;
+                line-height: 0;
             }
             .not-bars img {
                 margin: -9.375% 0;
             }
         </style>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/DarkRiDDeR/vue-pre-youtube@master/dist/vue-pre-youtube.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/DarkRiDDeR/vue-pre-youtube@latest/dist/vue-pre-youtube.min.js"></script>
     </head>
     <body>
         <div id="app">
             <h1>Vue Pre Youtube</h1>
             <h2>Mode hover</h2>
             <p>
-                <preyoutube id="RK1K2bCg4J8" />
+                <preyoutube id="RK1K2bCg4J8"></preyoutube>
             </p>
             <h2>Mode constant</h2>
             <h3>Format default</h3>
             <p>
-                <preyoutube id="RK1K2bCg4J8" mode="constant" format="default" />
+                <preyoutube id="RK1K2bCg4J8" mode="constant" format="default"></preyoutube>
             </p>
             <h3>Format 0</h3>
             <p>
-                <preyoutube id="RK1K2bCg4J8" mode="constant" format="0" />
+                <preyoutube id="RK1K2bCg4J8" mode="constant" format="0"></preyoutube>
             </p>
             <h3>Format mqdefault</h3>
             <p>
-                <preyoutube id="RK1K2bCg4J8" mode="constant" format="mqdefault" />
+                <preyoutube id="RK1K2bCg4J8" mode="constant" format="mqdefault"></preyoutube>
             </p>
             <h3>Format hqdefault</h3>
             <p>
-                <preyoutube id="RK1K2bCg4J8" mode="constant" format="hqdefault" />
+                <preyoutube id="RK1K2bCg4J8" mode="constant" format="hqdefault"></preyoutube>
             </p>
             <h3>Format sddefault</h3>
             <p>
-                <preyoutube id="RK1K2bCg4J8" mode="constant" format="sddefault" />
+                <preyoutube id="RK1K2bCg4J8" mode="constant" format="sddefault"></preyoutube>
             </p>
             <h3>Format maxresdefault</h3>
             <p>
-                <preyoutube id="RK1K2bCg4J8" mode="constant" format="maxresdefault" />
+                <preyoutube id="RK1K2bCg4J8" mode="constant" format="maxresdefault"></preyoutube>
             </p>
             
             <h1>Recipe for removing the 16×9 Bars</h1>
-            <p>
-                <div class="not-bars">
-                    <preyoutube id="RK1K2bCg4J8" mode="constant" format="hqdefault" />
-                </div>
-            </p>
+            <div class="not-bars">
+                <preyoutube id="RK1K2bCg4J8" mode="constant" format="hqdefault"></preyoutube>
+            </div>
         </div>
         <script>
             var PreYoutube = VuePreYoutube.default;
